temp/objects/Selected_Job__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_CV__c</fullName>
        <label>Candidate CV</label>
        <referenceTo>Candidate_CV__c</referenceTo>
        <relationshipLabel>Selected Jobs</relationshipLabel>
        <relationshipName>Selected_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Advertisement__c</fullName>
        <label>Job Advertisement</label>
        <referenceTo>Job_Advertisement__c</referenceTo>
        <relationshipLabel>Selected Jobs</relationshipLabel>
        <relationshipName>Selected_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Selected Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SJ-{0000}</displayFormat>
        <label>Selected Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>